# PyCommandAI

./: .env  .gitignore  LICENSE  README.md  chat_file.txt  custom_tools.py  main.py  pyproject.toml  setup.py
tools/: check_time.py  exit_chat.py  greet_user.py
